Sun Nov  9 18:35:36 2014  Tanaka Akira  <akr@fsij.org>

	* test/xmlrpc: Refine log test.

Sun Nov  9 18:33:33 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* lib/unicode_normalize/normalize.rb: Replaced if-else by
	  case in self.normalized? in parallel to r48309.

Sun Nov  9 18:07:00 2014  Tanaka Akira  <akr@fsij.org>

	* test/xmlrpc: Use assert_join_threads.

Sun Nov  9 14:06:13 2014  Tanaka Akira  <akr@fsij.org>

	* test/xmlrpc: Test webrick error log is empty.

Sun Nov  9 13:47:02 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (is_incremental_marking): use #if/#else because
	  rb_objspace_t::flags::during_incremental_marking is not defined
	  when GC_ENABLE_INCREMENTAL_MARK is 0.

	* gc.c (will_be_incremental_marking, is_full_marking): similar fix.

Sun Nov  9 12:16:22 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/securerandom.rb (SecureRandom.gen_random): separate
	  implementation details and select at the load time.

Sun Nov  9 12:09:38 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/win32/lib/win32/registry.rb (Win32::Registry::API#Enum{Value,Key):
	  ditto.

Sun Nov  9 11:48:40 2014  Tanaka Akira  <akr@fsij.org>

	* test/net/http: Examine webrick log.

Sun Nov  9 11:45:19 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* gems/bundled_gems: upgraded to test-unit 3.0.5.

Sun Nov  9 11:40:50 2014  Tanaka Akira  <akr@fsij.org>

	* defs/known_errors.def: More errors for FreeBSD.

Sun Nov  9 11:25:11 2014  Kazuki Tsujimoto  <kazuki@callcc.net>

	* gems/bundled_gems: upgraded to power_assert 0.2.0.

Sun Nov  9 10:31:03 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/securerandom.rb: set the script encoding to make a string
	  literal in SecureRandom::Kernel32.last_error_message single byte
	  encoding so msg[] works in bytes, since FormatMessage() returns
	  the size in TCHARs, not in characters.

Sun Nov  9 09:50:22 2014  Tanaka Akira  <akr@fsij.org>

	* test/webrick: Refine log tests.

Sun Nov  9 08:58:05 2014  Tanaka Akira  <akr@fsij.org>